social links and housekeeping

--- a/categories.html
+++ b/categories.html
@@ -12,12 +12,12 @@
                 <h1><a href="/">A Hart's Eye View </a></h1>
                 <nav><ul>
                     <li><a href="/pages/about.html">About</a></li>
-                    <li><a href="/category/misc.html">misc</a></li>
+                    <li><a href="/category/announcements.html">Announcements</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on A Hart's Eye View</h1>
     <ul>
-        <li><a href="/category/misc.html">misc</a> (1)</li>
+        <li><a href="/category/announcements.html">Announcements</a> (1)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
@@ -26,7 +26,6 @@
                             <li><a href="http://getpelican.com/">Pelican</a></li>
                             <li><a href="http://python.org/">Python.org</a></li>
                             <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                            <li><a href="#">You can modify those links in your config file</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
@@ -34,8 +33,8 @@
                         <ul>
                             <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="https://www.linkedin.com/in/james-hart-3543664b/">LinkedIn</a></li>
+                            <li><a href="https://github.com/jameselliothart/">GitHub</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
