--- a/pages/about.html
+++ b/pages/about.html
@@ -12,7 +12,7 @@
                 <h1><a href="/">A Hart's Eye View </a></h1>
                 <nav><ul>
                     <li class="active"><a href="/pages/about.html">About</a></li>
-                    <li><a href="/category/misc.html">misc</a></li>
+                    <li><a href="/category/announcements.html">Announcements</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -31,7 +31,6 @@ weightlifting or Jungian thought (or maybe all those things at once).</p>
                             <li><a href="http://getpelican.com/">Pelican</a></li>
                             <li><a href="http://python.org/">Python.org</a></li>
                             <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                            <li><a href="#">You can modify those links in your config file</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
@@ -39,8 +38,8 @@ weightlifting or Jungian thought (or maybe all those things at once).</p>
                         <ul>
                             <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="https://www.linkedin.com/in/james-hart-3543664b/">LinkedIn</a></li>
+                            <li><a href="https://github.com/jameselliothart/">GitHub</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
