--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
       <a href="https://jameselliothart.github.io">    Home
 </a>
 
+      <a href="/archives.html">Archives</a>
+      <a href="/categories.html">Categories</a>
+      <a href="/tags.html">Tags</a>
 
       <a href="https://jameselliothart.github.io/feeds/all.atom.xml">    Atom
 </a>
