--- a/tags.html
+++ b/tags.html
@@ -85,7 +85,10 @@
 </h1>
   </header>
   <div>
-    <ul class="list">    </ul>
+    <ul class="list">          <li><a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a> (1)</li>
+    </ul>
   </div>
 </article>
 
