add link to lean manufacturing

--- a/maps-of-devops-introduction.html
+++ b/maps-of-devops-introduction.html
@@ -121,7 +121,7 @@ seen its impenetrability to those
 not expressly interested in seeking it out and have been
 disheartened by the ease with which it is misunderstood.</p>
 <p>Traditional introductions to DevOps typically begin with an
-analogy to the Lean manufacturing movement of the 1980's, and
+analogy to the <a href="https://www.leanproduction.com/">Lean manufacturing</a> movement of the 1980's, and
 I have always found that somewhat
 unsatisfying. This approach has the benefit of rooting
 DevOps in a mature framework, but it runs the risk of
