update figures and approach section

--- a/archives.html
+++ b/archives.html
@@ -86,9 +86,9 @@
   </header>
   <div>
     <dl>
-      <dt>Fri 25 October 2019</dt>
+      <dt>October 25, 2019</dt>
       <dd><a href="https://jameselliothart.github.io/maps-of-devops-introduction.html">Maps of DevOps: Introduction</a></dd>
-      <dt>Tue 22 October 2019</dt>
+      <dt>October 22, 2019</dt>
       <dd><a href="https://jameselliothart.github.io/first-post-on-a-harts-eye-view.html">First Post on A Hart's Eye View</a></dd>
     </dl>
   </div>
