--- a/first-post-on-a-harts-eye-view.html
+++ b/first-post-on-a-harts-eye-view.html
@@ -89,9 +89,10 @@
       
     <h1 id="first-post-on-a-harts-eye-view">First Post on A Hart's Eye View</h1>
     <p>
-          Posted on Tue 22 October 2019 in <a href="https://jameselliothart.github.io/category/announcements.html">Announcements</a>
+          Posted on October 22, 2019 in <a href="https://jameselliothart.github.io/category/announcements.html">Announcements</a>
 
 
+      <br>
     </p>
   </header>
 
