--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <header>
     <h2><a href="https://jameselliothart.github.io/maps-of-devops-introduction.html#maps-of-devops-introduction">Maps of DevOps: Introduction</a></h2>
     <p>
-          Posted on Fri 25 October 2019 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
+          Posted on October 25, 2019 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
 
 
           &#8226;     Tagged with
@@ -113,7 +113,7 @@ be friendly even to those without a technical …</p>
   <header>
     <h2><a href="https://jameselliothart.github.io/first-post-on-a-harts-eye-view.html#first-post-on-a-harts-eye-view">First Post on A Hart's Eye View</a></h2>
     <p>
-          Posted on Tue 22 October 2019 in <a href="https://jameselliothart.github.io/category/announcements.html">Announcements</a>
+          Posted on October 22, 2019 in <a href="https://jameselliothart.github.io/category/announcements.html">Announcements</a>
 
 
 
