--- a/maps-of-devops-introduction.html
+++ b/maps-of-devops-introduction.html
@@ -33,7 +33,7 @@
 <meta property="og:url" content="https://jameselliothart.github.io/maps-of-devops-introduction.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2019-10-25 00:00:00-05:00"/>
-<meta property="article:modified_time" content=""/>
+<meta property="article:modified_time" content="2019-10-27 00:00:00-05:00"/>
 <meta property="article:author" content="https://jameselliothart.github.io/author/james-hart.html">
 <meta property="article:section" content="DevOps"/>
 <meta property="article:tag" content="DevOps"/>
@@ -92,9 +92,11 @@
       
     <h1 id="maps-of-devops-introduction">Maps of DevOps: Introduction</h1>
     <p>
-          Posted on Fri 25 October 2019 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
+          Posted on October 25, 2019 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
 
 
+      <br>
+        Updated: October 27, 2019
     </p>
   </header>
 
@@ -131,7 +133,7 @@ the ways in which ideas or methods generalize. Thus
 the congruence between these disparate fields suggested to me
 an underlying idea common to both.</p>
 <p>As I thought about these ideas, I noticed a similarity between
-the figures used to express <a href="https://itrevolution.com/the-three-ways-principles-underpinning-devops/">The Three Ways of DevOps</a>
+the figures (see below) used to express <a href="https://itrevolution.com/the-three-ways-principles-underpinning-devops/">The Three Ways of DevOps</a>
 <sup>2</sup> and those used to
 describe the phenomenological landscape of human motivation in
 <em>Maps of Meaning</em><sup>3</sup> . Thus the title of this series, <em>Maps of DevOps</em>,
@@ -143,24 +145,29 @@ derived from the ideas presented there.</p>
 <p>There is more wisdom in your body than in your deepest philosophy<br>
 -Friedrich Nietzsche, <em>Thus Spoke Zarathustra</em></p>
 </blockquote>
-<p>At a high level, my
-goal is to marry Gene Kim's Three Ways of DevOps (expressed succinctly
+<p>One of the main theses of <em>Maps of Meaning</em> is that there is a
+universal story-like structure through which we understand the world.
+Seen at a sufficiently abstract level, all belief systems fit within
+this framework, thus the subtitle <em>The Architecture of Belief</em>.
+My goal is to show that Gene Kim's Three Ways of DevOps (expressed succinctly
 in his post on <a href="https://itrevolution.com/the-three-ways-principles-underpinning-devops/">The Three Ways</a> and elaborated in detail in
-<em>The DevOps Handbook</em><sup>4</sup>) with some of the
-ideas underlying the book <em>Maps of Meaning: The Architecture of
-Belief</em>. More precisely, I will attempt to show that DevOps can
-naturally be understood within that framework.</p>
+<em>The DevOps Handbook</em><sup>4</sup>) can naturally be understood within
+the <em>Maps of Meaning</em> framework.</p>
 <p>I believe this approach makes these principles more
-widely applicable as it emphasizes that DevOps is an idea, a culture,
-a pattern of existence and not a particular set of tools and
-buzzwords.</p>
+widely applicable as it emphasizes that DevOps is a culture -
+a pattern of behavior - and not a particular set of tools and
+buzzwords. Put another way, DevOps is an <em>idea</em> that inhabits an
+organization and the individuals within it.</p>
 <p>I hope you will join me on this journey.</p>
 <h2>Figures</h2>
 <p>The following are figures from <em>Maps of Meaning</em> juxtaposed with Gene
-Kim's diagrammatic representations of The Three Ways of DevOps.</p>
+Kim's diagrammatic representations of The Three Ways of DevOps.
+The <em>Maps of Meaning</em> figures have bizarre names owing to that book's
+very different subject matter, but we will cover
+that ground in due time.</p>
 <h3>The Domain and Constituent Elements of the Known vs The First Way</h3>
 <p><img src="https://jameselliothart.github.io/images/maps-of-devops-intro/TheKnown.jpg" width="500">
-<img alt="The First Way" src="https://jameselliothart.github.io/images/maps-of-devops-intro/TheFirstWay.jpg"></p>
+<img alt="The First Way" src="https://jameselliothart.github.io/images/maps-of-devops-intro/TheFirstWay.png"></p>
 <h3>The Metamythological Cycle of the Way vs The Second Way</h3>
 <p><img src="https://jameselliothart.github.io/images/maps-of-devops-intro/TheCycle.jpg" width="500">
 <img alt="The First Way" src="https://jameselliothart.github.io/images/maps-of-devops-intro/TheSecondWay.png"></p>
