--- a/maps-of-devops-introduction.html
+++ b/maps-of-devops-introduction.html
@@ -23,17 +23,17 @@
 
 
 <meta name="author" content="James Hart" />
-<meta name="description" content="Motivation People don&#39;t have ideas. Ideas have people. -Carl Jung This post marks the beginning of a multi-part series explaining the ideas of DevOps (that is, Development Operations). The target audience is primarily those unfamiliar with DevOps, and it is meant to be friendly even to those without a technical …" />
+<meta name="description" content="Welcome This post marks the beginning of a multi-part series explaining the ideas of DevOps (that is, Development Operations). The target audience is primarily those unfamiliar with DevOps, and it is meant to be friendly even to those without a technical background who seek to understand the principles behind what …" />
 <meta name="keywords" content="DevOps, MapsOfMeaning, TheThreeWays">
 
 <meta property="og:site_name" content="A Hart's Eye View"/>
 <meta property="og:title" content="Maps of DevOps: Introduction"/>
-<meta property="og:description" content="Motivation People don&#39;t have ideas. Ideas have people. -Carl Jung This post marks the beginning of a multi-part series explaining the ideas of DevOps (that is, Development Operations). The target audience is primarily those unfamiliar with DevOps, and it is meant to be friendly even to those without a technical …"/>
+<meta property="og:description" content="Welcome This post marks the beginning of a multi-part series explaining the ideas of DevOps (that is, Development Operations). The target audience is primarily those unfamiliar with DevOps, and it is meant to be friendly even to those without a technical background who seek to understand the principles behind what …"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://jameselliothart.github.io/maps-of-devops-introduction.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2019-10-25 00:00:00-05:00"/>
-<meta property="article:modified_time" content="2019-10-27 00:00:00-05:00"/>
+<meta property="article:modified_time" content="2019-12-05 00:00:00-06:00"/>
 <meta property="article:author" content="https://jameselliothart.github.io/author/james-hart.html">
 <meta property="article:section" content="DevOps"/>
 <meta property="article:tag" content="DevOps"/>
@@ -94,19 +94,14 @@
     <p>
           Posted on October 25, 2019 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
 
-
-      <br>
-        Updated: October 27, 2019
+          </br>
+            Updated: December 05, 2019
     </p>
   </header>
 
 
   <div>
-    <h2>Motivation</h2>
-<blockquote>
-<p>People don't have ideas. Ideas have people.<br>
--Carl Jung</p>
-</blockquote>
+    <h2>Welcome</h2>
 <p>This post marks the beginning of a multi-part series
 explaining the ideas of DevOps (that is, Development Operations).
 The target audience is primarily those
@@ -115,6 +110,22 @@ be friendly even to those without a technical background who seek to
 understand the principles behind what has become something of a tech
 buzzword. Perhaps even those already initiated may find a nice
 insight or two.</p>
+<h2>Definitions</h2>
+<p>To begin, we should first define some terms.
+"Software development" is generally concerned with building applications which provide some business value - that is, which provide solutions to business problems.
+On the other hand, "information-technology (IT) operations" is generally concerned with keeping an organization running smoothly by maintaining the existing applications and the infrastructure on which they rely while ensuring that changes to those assets do not cause service disruptions.
+As you can see, these goals are not necessarily in alignment and could even be at odds.</p>
+<p>Thus, <a href="https://en.wikipedia.org/wiki/DevOps">Wikipedia</a> defines DevOps as such:</p>
+<blockquote>
+<p>DevOps is a set of practices that combines software development and information-technology operations which aims to shorten the systems development life cycle and provide continuous delivery with high software quality</p>
+</blockquote>
+<p>In other words, DevOps is the attempt to have the best of both worlds: to delivery software quickly and often while maintaining a high level of system up time.
+Throughout this series, we will explore the ideas which underlie this goal, and in describing the underlying pattern, we hope to reveal a broader applicability of these principles such as always comes when one extracts a general principle from a particular case.</p>
+<h2>Motivation</h2>
+<blockquote>
+<p>People don't have ideas. Ideas have people.<br>
+-Carl Jung</p>
+</blockquote>
 <p>I first encountered the principles of DevOps in a book called
 <em>Leading the Transformation</em><sup>1</sup> some years ago and have since
 become rather passionate about the topic.
@@ -159,6 +170,7 @@ a pattern of behavior - and not a particular set of tools and
 buzzwords. Put another way, DevOps is an <em>idea</em> that inhabits an
 organization and the individuals within it.</p>
 <p>I hope you will join me on this journey.</p>
+<hr>
 <h2>Figures</h2>
 <p>The following are figures from <em>Maps of Meaning</em> juxtaposed with Gene
 Kim's diagrammatic representations of The Three Ways of DevOps.
