--- a/tags.html
+++ b/tags.html
@@ -85,9 +85,12 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a> (1)</li>
+    <ul class="list">          <li><a href="https://jameselliothart.github.io/tag/cicd.html">CICD</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/continuousdelivery.html">ContinuousDelivery</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a> (2)</li>
+          <li><a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a> (2)</li>
+          <li><a href="https://jameselliothart.github.io/tag/thefirstwayofdevops.html">TheFirstWayOfDevOps</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a> (2)</li>
     </ul>
   </div>
 </article>
