second way of devops post

--- a/maps-of-devops-the-first-way.html
+++ b/maps-of-devops-the-first-way.html
@@ -24,7 +24,7 @@
 
 <meta name="author" content="James Hart" />
 <meta name="description" content="Welcome Welcome to the second post in the Maps of DevOps series! In this installment, we will explore The First Way: Systems Thinking. Motivating Scenario: Mailing Letters In an attempt to avoid the obfuscating effect of technical jargon, we will use a technology-agnostic scenario as the stage within which to …" />
-<meta name="keywords" content="DevOps, MapsOfMeaning, TheThreeWays, TheFirstWayOfDevOps, CICD, ContinuousDelivery">
+<meta name="keywords" content="DevOps, MapsOfMeaning, TheThreeWays, TheFirstWayOfDevOps, SystemsThinking, CICD, ContinuousIntegration, ContinuousDelivery">
 
 <meta property="og:site_name" content="A Hart's Eye View"/>
 <meta property="og:title" content="Maps of DevOps: The First Way"/>
@@ -40,7 +40,9 @@
 <meta property="article:tag" content="MapsOfMeaning"/>
 <meta property="article:tag" content="TheThreeWays"/>
 <meta property="article:tag" content="TheFirstWayOfDevOps"/>
+<meta property="article:tag" content="SystemsThinking"/>
 <meta property="article:tag" content="CICD"/>
+<meta property="article:tag" content="ContinuousIntegration"/>
 <meta property="article:tag" content="ContinuousDelivery"/>
 <meta property="og:image" content="/images/me.jpeg">
 
@@ -60,9 +62,6 @@
         <ul class="list">
           <li><a href="https://jameselliothart.github.io/pages/about.html#about">About</a></li>
 
-          <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
-          <li><a href="http://python.org/" target="_blank">Python.org</a></li>
-          <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a></li>
         </ul>
       </nav>
 
@@ -239,7 +238,9 @@ The CI/CD pipeline provides consistency and visibility to a process that otherwi
       <a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a>
       <a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a>
       <a href="https://jameselliothart.github.io/tag/thefirstwayofdevops.html">TheFirstWayOfDevOps</a>
+      <a href="https://jameselliothart.github.io/tag/systemsthinking.html">SystemsThinking</a>
       <a href="https://jameselliothart.github.io/tag/cicd.html">CICD</a>
+      <a href="https://jameselliothart.github.io/tag/continuousintegration.html">ContinuousIntegration</a>
       <a href="https://jameselliothart.github.io/tag/continuousdelivery.html">ContinuousDelivery</a>
     </p>
   </div>
