--- a/archives.html
+++ b/archives.html
@@ -49,9 +49,6 @@
         <ul class="list">
           <li><a href="https://jameselliothart.github.io/pages/about.html#about">About</a></li>
 
-          <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
-          <li><a href="http://python.org/" target="_blank">Python.org</a></li>
-          <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a></li>
         </ul>
       </nav>
 
@@ -86,6 +83,8 @@
   </header>
   <div>
     <dl>
+      <dt>May 19, 2020</dt>
+      <dd><a href="https://jameselliothart.github.io/maps-of-devops-the-second-way.html">Maps of DevOps: The Second Way</a></dd>
       <dt>December 08, 2019</dt>
       <dd><a href="https://jameselliothart.github.io/maps-of-devops-the-first-way.html">Maps of DevOps: The First Way</a></dd>
       <dt>October 25, 2019</dt>
