--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
         <ul class="list">
           <li><a href="https://jameselliothart.github.io/pages/about.html#about">About</a></li>
 
-          <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
-          <li><a href="http://python.org/" target="_blank">Python.org</a></li>
-          <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a></li>
         </ul>
       </nav>
 
@@ -82,6 +79,29 @@
 
 <article>
   <header>
+    <h2><a href="https://jameselliothart.github.io/maps-of-devops-the-second-way.html#maps-of-devops-the-second-way">Maps of DevOps: The Second Way</a></h2>
+    <p>
+          Posted on May 19, 2020 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a>,              <a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a>,              <a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a>,              <a href="https://jameselliothart.github.io/tag/thesecondwayofdevops.html">TheSecondWayOfDevOps</a>,              <a href="https://jameselliothart.github.io/tag/feedback.html">Feedback</a>,              <a href="https://jameselliothart.github.io/tag/apm.html">APM</a>,              <a href="https://jameselliothart.github.io/tag/monitoring.html">Monitoring</a>
+    </p>
+  </header>
+  <div>
+      <h2>Welcome</h2>
+<p>Welcome to the second post in the Maps of DevOps series!
+In <a href="https://jameselliothart.github.io/maps-of-devops-the-first-way">The First Way</a>, we introduced the scenario of mailing letters to use as a stand-in for delivering software and discussed the necessity of performing our analysis from a system perspective.
+In doing so, we discovered that Single …</p>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-the-second-way.html#maps-of-devops-the-second-way">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://jameselliothart.github.io/maps-of-devops-the-first-way.html#maps-of-devops-the-first-way">Maps of DevOps: The First Way</a></h2>
     <p>
           Posted on December 08, 2019 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
@@ -89,7 +109,7 @@
 
           &#8226;     Tagged with
 
-              <a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a>,              <a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a>,              <a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a>,              <a href="https://jameselliothart.github.io/tag/thefirstwayofdevops.html">TheFirstWayOfDevOps</a>,              <a href="https://jameselliothart.github.io/tag/cicd.html">CICD</a>,              <a href="https://jameselliothart.github.io/tag/continuousdelivery.html">ContinuousDelivery</a>
+              <a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a>,              <a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a>,              <a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a>,              <a href="https://jameselliothart.github.io/tag/thefirstwayofdevops.html">TheFirstWayOfDevOps</a>,              <a href="https://jameselliothart.github.io/tag/systemsthinking.html">SystemsThinking</a>,              <a href="https://jameselliothart.github.io/tag/cicd.html">CICD</a>,              <a href="https://jameselliothart.github.io/tag/continuousintegration.html">ContinuousIntegration</a>,              <a href="https://jameselliothart.github.io/tag/continuousdelivery.html">ContinuousDelivery</a>
     </p>
   </header>
   <div>
