--- a/maps-of-devops-introduction.html
+++ b/maps-of-devops-introduction.html
@@ -33,7 +33,7 @@
 <meta property="og:url" content="https://jameselliothart.github.io/maps-of-devops-introduction.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2019-10-25 00:00:00-05:00"/>
-<meta property="article:modified_time" content="2019-12-05 00:00:00-06:00"/>
+<meta property="article:modified_time" content="2020-05-19 00:00:00-05:00"/>
 <meta property="article:author" content="https://jameselliothart.github.io/author/james-hart.html">
 <meta property="article:section" content="DevOps"/>
 <meta property="article:tag" content="DevOps"/>
@@ -57,9 +57,6 @@
         <ul class="list">
           <li><a href="https://jameselliothart.github.io/pages/about.html#about">About</a></li>
 
-          <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
-          <li><a href="http://python.org/" target="_blank">Python.org</a></li>
-          <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a></li>
         </ul>
       </nav>
 
@@ -95,7 +92,7 @@
           Posted on October 25, 2019 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
 
           </br>
-            Updated: December 05, 2019
+            Updated: May 19, 2020
     </p>
   </header>
 
@@ -123,7 +120,7 @@ As you can see, these goals are not necessarily in alignment and could even be a
 Throughout this series, we will explore the ideas which underlie this goal, and in describing the underlying pattern, we hope to reveal a broader applicability of these principles such as always comes when one extracts a general principle from a particular case.</p>
 <h2>Motivation</h2>
 <blockquote>
-<p>People don't have ideas. Ideas have people.<br>
+<p>People don't have ideas. Ideas have people.
 -Carl Jung</p>
 </blockquote>
 <p>I first encountered the principles of DevOps in a book called
@@ -153,7 +150,7 @@ perhaps predictably is to show how the principles of DevOps can be
 derived from the ideas presented there.</p>
 <h2>Approach</h2>
 <blockquote>
-<p>There is more wisdom in your body than in your deepest philosophy<br>
+<p>There is more wisdom in your body than in your deepest philosophy
 -Friedrich Nietzsche, <em>Thus Spoke Zarathustra</em></p>
 </blockquote>
 <p>One of the main theses of <em>Maps of Meaning</em> is that there is a
@@ -169,7 +166,7 @@ widely applicable as it emphasizes that DevOps is a culture -
 a pattern of behavior - and not a particular set of tools and
 buzzwords. Put another way, DevOps is an <em>idea</em> that inhabits an
 organization and the individuals within it.</p>
-<p>I hope you will join me on this journey.</p>
+<p>I hope you will join me on this journey to reimagine the principles of DevOps.</p>
 <hr>
 <h2>Figures</h2>
 <p>The following are figures from <em>Maps of Meaning</em> juxtaposed with Gene
@@ -180,8 +177,8 @@ that ground in due time.</p>
 <h3>The Domain and Constituent Elements of the Known vs The First Way</h3>
 <p><img src="https://jameselliothart.github.io/images/maps-of-devops-intro/TheKnown.jpg" width="500">
 <img alt="The First Way" src="https://jameselliothart.github.io/images/maps-of-devops-intro/TheFirstWay.png"></p>
-<h3>The Metamythological Cycle of the Way vs The Second Way</h3>
-<p><img src="https://jameselliothart.github.io/images/maps-of-devops-intro/TheCycle.jpg" width="500">
+<h3>The Regeneration of Stability from the Domain of Chaos vs The Second Way</h3>
+<p><img src="https://jameselliothart.github.io/images/maps-of-devops-intro/RegenerationFromChaos.jpg" width="500">
 <img alt="The First Way" src="https://jameselliothart.github.io/images/maps-of-devops-intro/TheSecondWay.png"></p>
 <h3>Bounded Revolution vs The Third Way</h3>
 <p><img src="https://jameselliothart.github.io/images/maps-of-devops-intro/BoundedRevolution.jpg" width="500">
