--- a/tags.html
+++ b/tags.html
@@ -49,9 +49,6 @@
         <ul class="list">
           <li><a href="https://jameselliothart.github.io/pages/about.html#about">About</a></li>
 
-          <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
-          <li><a href="http://python.org/" target="_blank">Python.org</a></li>
-          <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a></li>
         </ul>
       </nav>
 
@@ -85,12 +82,18 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="https://jameselliothart.github.io/tag/cicd.html">CICD</a> (1)</li>
+    <ul class="list">          <li><a href="https://jameselliothart.github.io/tag/apm.html">APM</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/cicd.html">CICD</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/continuousdelivery.html">ContinuousDelivery</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a> (2)</li>
-          <li><a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a> (2)</li>
+          <li><a href="https://jameselliothart.github.io/tag/continuousintegration.html">ContinuousIntegration</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a> (3)</li>
+          <li><a href="https://jameselliothart.github.io/tag/feedback.html">Feedback</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a> (3)</li>
+          <li><a href="https://jameselliothart.github.io/tag/monitoring.html">Monitoring</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/systemsthinking.html">SystemsThinking</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thefirstwayofdevops.html">TheFirstWayOfDevOps</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a> (2)</li>
+          <li><a href="https://jameselliothart.github.io/tag/thesecondwayofdevops.html">TheSecondWayOfDevOps</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a> (3)</li>
     </ul>
   </div>
 </article>
