update the second way post

--- a/index.html
+++ b/index.html
@@ -102,6 +102,30 @@ In doing so, we discovered that Single …</p>
 </article>
 <article>
   <header>
+    <h2><a href="https://jameselliothart.github.io/maps-of-devops-the-third-way.html#maps-of-devops-the-third-way">Maps of DevOps: The Third Way</a></h2>
+    <p>
+          Posted on May 19, 2020 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a>,              <a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a>,              <a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a>,              <a href="https://jameselliothart.github.io/tag/thethirdwayofdevops.html">TheThirdWayOfDevOps</a>,              <a href="https://jameselliothart.github.io/tag/continuouslearning.html">ContinuousLearning</a>
+    </p>
+  </header>
+  <div>
+      <h2>Welcome</h2>
+<p>Welcome to the third and final post in the Maps of DevOps series!</p>
+<h2>A Return to the Beginning</h2>
+<p>We noted at the beginning that Development and Operations are composed of smaller units just as the business was composed of Dev and Ops.
+Now consider mailing letters as a full-scale …</p>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-the-third-way.html#maps-of-devops-the-third-way">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://jameselliothart.github.io/maps-of-devops-the-first-way.html#maps-of-devops-the-first-way">Maps of DevOps: The First Way</a></h2>
     <p>
           Posted on December 08, 2019 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
