--- a/maps-of-devops-the-second-way.html
+++ b/maps-of-devops-the-second-way.html
@@ -33,7 +33,7 @@
 <meta property="og:url" content="https://jameselliothart.github.io/maps-of-devops-the-second-way.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2020-05-19 00:00:00-05:00"/>
-<meta property="article:modified_time" content=""/>
+<meta property="article:modified_time" content="2020-05-22 00:00:00-05:00"/>
 <meta property="article:author" content="https://jameselliothart.github.io/author/james-hart.html">
 <meta property="article:section" content="DevOps"/>
 <meta property="article:tag" content="DevOps"/>
@@ -96,6 +96,7 @@
           Posted on May 19, 2020 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
 
           </br>
+            Updated: May 22, 2020
     </p>
   </header>
 
@@ -117,11 +118,15 @@ One cannot "do DevOps" simply by implementing DevOps "tools" - they must address
 This common mistake underlies the trend of "DevOps" becoming simply a marketing gimmick for selling the latest tools and related services.</p>
 <p>Returning to anomaly, we may be justified in thinking that they are rare events (almost by definition), but the <em>potential</em> for anomaly always surrounds us in latent form.
 Small enough anomalies may hardly be noticed as we are able to quickly incorporate them into a known map, or schema, within which to understand them.
-However, a sufficiently large anomaly can transform the Known into Unknown.
+However, a sufficiently large anomaly can transform the Known into Unknown or, as it can well be called, <em>Chaos</em>.
 We experience this when something so unexpected happens that our current pursuits or methods or even our current state of being come into question.</p>
 <p>To illustrate, suppose you are folding papers in our letter mailing scenario and the table catches on fire.
 You are now in a very different place with very different motivations than you were before!
 Your previous map has disintegrated, and this new information must be taken into account and reintegrated into a new one (presumably centered around putting out the fire and only sometime afterwards resuming paper folding).</p>
+<p>Many will be familiar with the colloquialism of saying a project is "on fire" when a catastrophic problem or situation arises.
+If this symbolism is not immediately understood it is at least forever remembered: the state of the project needs to be reevaluated and immediately attended to because a foundational assumption has come into question.
+We have descended into Chaos.
+In order to carry on, the map we had used to guide us forward must be updated to account for the anomalous information that has come to our attention.</p>
 <p><img src="https://jameselliothart.github.io/images/maps-of-devops-second/RegenerationFromChaos.jpg" width="500"></p>
 <h2>Anomalies in Mailing Letters</h2>
 <p>To further our analysis, consider the following less extreme anomalies that could occur:</p>
