--- a/archives.html
+++ b/archives.html
@@ -85,6 +85,8 @@
     <dl>
       <dt>May 19, 2020</dt>
       <dd><a href="https://jameselliothart.github.io/maps-of-devops-the-second-way.html">Maps of DevOps: The Second Way</a></dd>
+      <dt>May 19, 2020</dt>
+      <dd><a href="https://jameselliothart.github.io/maps-of-devops-the-third-way.html">Maps of DevOps: The Third Way</a></dd>
       <dt>December 08, 2019</dt>
       <dd><a href="https://jameselliothart.github.io/maps-of-devops-the-first-way.html">Maps of DevOps: The First Way</a></dd>
       <dt>October 25, 2019</dt>
