--- a/tags.html
+++ b/tags.html
@@ -86,14 +86,16 @@
           <li><a href="https://jameselliothart.github.io/tag/cicd.html">CICD</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/continuousdelivery.html">ContinuousDelivery</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/continuousintegration.html">ContinuousIntegration</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a> (3)</li>
+          <li><a href="https://jameselliothart.github.io/tag/continuouslearning.html">ContinuousLearning</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a> (4)</li>
           <li><a href="https://jameselliothart.github.io/tag/feedback.html">Feedback</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a> (3)</li>
+          <li><a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a> (4)</li>
           <li><a href="https://jameselliothart.github.io/tag/monitoring.html">Monitoring</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/systemsthinking.html">SystemsThinking</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thefirstwayofdevops.html">TheFirstWayOfDevOps</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thesecondwayofdevops.html">TheSecondWayOfDevOps</a> (1)</li>
-          <li><a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a> (3)</li>
+          <li><a href="https://jameselliothart.github.io/tag/thethirdwayofdevops.html">TheThirdWayOfDevOps</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a> (4)</li>
     </ul>
   </div>
 </article>
