fsharp todo kata

--- a/archives.html
+++ b/archives.html
@@ -83,10 +83,18 @@
   </header>
   <div>
     <dl>
+      <dt>October 07, 2020</dt>
+      <dd><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-3.html">Todo Kata - FSharp Part 3</a></dd>
+      <dt>October 06, 2020</dt>
+      <dd><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-2.html">Todo Kata - FSharp Part 2</a></dd>
+      <dt>October 05, 2020</dt>
+      <dd><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1.html">Todo Kata - FSharp Part 1</a></dd>
+      <dt>October 04, 2020</dt>
+      <dd><a href="https://jameselliothart.github.io/todo-kata-introduction.html">Todo Kata - Introduction</a></dd>
+      <dt>May 29, 2020</dt>
+      <dd><a href="https://jameselliothart.github.io/maps-of-devops-the-third-way.html">Maps of DevOps: The Third Way</a></dd>
       <dt>May 19, 2020</dt>
       <dd><a href="https://jameselliothart.github.io/maps-of-devops-the-second-way.html">Maps of DevOps: The Second Way</a></dd>
-      <dt>May 19, 2020</dt>
-      <dd><a href="https://jameselliothart.github.io/maps-of-devops-the-third-way.html">Maps of DevOps: The Third Way</a></dd>
       <dt>December 08, 2019</dt>
       <dd><a href="https://jameselliothart.github.io/maps-of-devops-the-first-way.html">Maps of DevOps: The First Way</a></dd>
       <dt>October 25, 2019</dt>
