--- a/index.html
+++ b/index.html
@@ -79,6 +79,120 @@
 
 <article>
   <header>
+    <h2><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-3.html#todo-kata-fsharp-part-3">Todo Kata - FSharp Part 3</a></h2>
+    <p>
+          Posted on October 07, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a>,              <a href="https://jameselliothart.github.io/tag/fsharp.html">FSharp</a>,              <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>,              <a href="https://jameselliothart.github.io/tag/development.html">Development</a>,              <a href="https://jameselliothart.github.io/tag/sqlite.html">SQLite</a>,              <a href="https://jameselliothart.github.io/tag/dapper.html">Dapper</a>,              <a href="https://jameselliothart.github.io/tag/orm.html">ORM</a>,              <a href="https://jameselliothart.github.io/tag/sql.html">SQL</a>
+    </p>
+  </header>
+  <div>
+      <p>Welcome to Part 3 of the FSharp Todo kata.
+In this final part, we will revisit the <code>done</code> application and modify it to work with a SQLite database instead of a text file.</p>
+<p>(Note: F# has a great feature called a <a href="https://docs.microsoft.com/en-us/dotnet/fsharp/tutorials/type-providers/">type provider</a> which can give strongly typed compile-time access …</p>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/todo-kata-fsharp-part-3.html#todo-kata-fsharp-part-3">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
+    <h2><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-2.html#todo-kata-fsharp-part-2">Todo Kata - FSharp Part 2</a></h2>
+    <p>
+          Posted on October 06, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a>,              <a href="https://jameselliothart.github.io/tag/fsharp.html">FSharp</a>,              <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>,              <a href="https://jameselliothart.github.io/tag/development.html">Development</a>
+    </p>
+  </header>
+  <div>
+      <p>In Part 2 of the FSharp kata, we will implement the <code>todo</code> application.
+This will allow us to keep track of a todo list, and it will utilize the <code>done</code> functionality we created in the previous post to record the items we complete.</p>
+<p>Series Outline</p>
+<ol>
+<li><a href="https://jameselliothart.github.io/todo-kata-introduction">Intro</a></li>
+<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1">Part 1 - Done</a></li>
+<li><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-2">Part …</a></li></ol>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/todo-kata-fsharp-part-2.html#todo-kata-fsharp-part-2">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
+    <h2><a href="https://jameselliothart.github.io/todo-kata-fsharp-part-1.html#todo-kata-fsharp-part-1">Todo Kata - FSharp Part 1</a></h2>
+    <p>
+          Posted on October 05, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a>,              <a href="https://jameselliothart.github.io/tag/fsharp.html">FSharp</a>,              <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>,              <a href="https://jameselliothart.github.io/tag/development.html">Development</a>
+    </p>
+  </header>
+  <div>
+      <p>Welcome to Part 1 of the FSharp kata to implement to todo list manager discussed in the <a href="https://jameselliothart.github.io/todo-kata-introduction">introduction</a>.
+In this post, we will implement the <code>done</code> command.
+We start with <code>done</code> rather than <code>todo</code> because <code>todo</code> will actually depend on functionality in <code>done</code> to save completed items whereas <code>done</code> has …</p>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/todo-kata-fsharp-part-1.html#todo-kata-fsharp-part-1">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
+    <h2><a href="https://jameselliothart.github.io/todo-kata-introduction.html#todo-kata-introduction">Todo Kata - Introduction</a></h2>
+    <p>
+          Posted on October 04, 2020 in <a href="https://jameselliothart.github.io/category/tutorial.html">Tutorial</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a>,              <a href="https://jameselliothart.github.io/tag/fsharp.html">FSharp</a>,              <a href="https://jameselliothart.github.io/tag/todo.html">Todo</a>,              <a href="https://jameselliothart.github.io/tag/development.html">Development</a>
+    </p>
+  </header>
+  <div>
+      <p>This post marks the introduction for a <a href="https://en.wikipedia.org/wiki/Kata_(programming)">code kata</a> series in which we will develop a command-line todo list manager in a few different languages.
+Each kata will assume a working development environment (I will be working in <a href="https://code.visualstudio.com/">VS Code</a> on Ubuntu 18.04) and basic familiarity with the syntax …</p>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/todo-kata-introduction.html#todo-kata-introduction">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
+    <h2><a href="https://jameselliothart.github.io/maps-of-devops-the-third-way.html#maps-of-devops-the-third-way">Maps of DevOps: The Third Way</a></h2>
+    <p>
+          Posted on May 29, 2020 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a>,              <a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a>,              <a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a>,              <a href="https://jameselliothart.github.io/tag/thethirdwayofdevops.html">TheThirdWayOfDevOps</a>,              <a href="https://jameselliothart.github.io/tag/continuouslearning.html">ContinuousLearning</a>
+    </p>
+  </header>
+  <div>
+      <h2>Welcome</h2>
+<p>Welcome to the third and final post in the Maps of DevOps series!
+In <a href="https://jameselliothart.github.io/maps-of-devops-the-first-way">The First Way: Systems Thinking</a> we used a mock scenario of mailing letters to demonstrate the importance of completing a finished product (sealed and mailed letters) over accumulating inventory (folded paper).
+We used this as …</p>
+      <br>
+      <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-the-third-way.html#maps-of-devops-the-third-way">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://jameselliothart.github.io/maps-of-devops-the-second-way.html#maps-of-devops-the-second-way">Maps of DevOps: The Second Way</a></h2>
     <p>
           Posted on May 19, 2020 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
@@ -96,30 +210,6 @@ In <a href="https://jameselliothart.github.io/maps-of-devops-the-first-way">The 
 In doing so, we discovered that Single …</p>
       <br>
       <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-the-second-way.html#maps-of-devops-the-second-way">    Continue reading
-</a>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="https://jameselliothart.github.io/maps-of-devops-the-third-way.html#maps-of-devops-the-third-way">Maps of DevOps: The Third Way</a></h2>
-    <p>
-          Posted on May 19, 2020 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
-
-
-          &#8226;     Tagged with
-
-              <a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a>,              <a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a>,              <a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a>,              <a href="https://jameselliothart.github.io/tag/thethirdwayofdevops.html">TheThirdWayOfDevOps</a>,              <a href="https://jameselliothart.github.io/tag/continuouslearning.html">ContinuousLearning</a>
-    </p>
-  </header>
-  <div>
-      <h2>Welcome</h2>
-<p>Welcome to the third and final post in the Maps of DevOps series!</p>
-<h2>A Return to the Beginning</h2>
-<p>We noted at the beginning that Development and Operations are composed of smaller units just as the business was composed of Dev and Ops.
-Now consider mailing letters as a full-scale …</p>
-      <br>
-      <a class="btn" href="https://jameselliothart.github.io/maps-of-devops-the-third-way.html#maps-of-devops-the-third-way">    Continue reading
 </a>
   </div>
   <hr />
