--- a/maps-of-devops-the-third-way.html
+++ b/maps-of-devops-the-third-way.html
@@ -23,16 +23,16 @@
 
 
 <meta name="author" content="James Hart" />
-<meta name="description" content="Welcome Welcome to the third and final post in the Maps of DevOps series! A Return to the Beginning We noted at the beginning that Development and Operations are composed of smaller units just as the business was composed of Dev and Ops. Now consider mailing letters as a full-scale …" />
+<meta name="description" content="Welcome Welcome to the third and final post in the Maps of DevOps series! In The First Way: Systems Thinking we used a mock scenario of mailing letters to demonstrate the importance of completing a finished product (sealed and mailed letters) over accumulating inventory (folded paper). We used this as …" />
 <meta name="keywords" content="DevOps, MapsOfMeaning, TheThreeWays, TheThirdWayOfDevOps, ContinuousLearning">
 
 <meta property="og:site_name" content="A Hart's Eye View"/>
 <meta property="og:title" content="Maps of DevOps: The Third Way"/>
-<meta property="og:description" content="Welcome Welcome to the third and final post in the Maps of DevOps series! A Return to the Beginning We noted at the beginning that Development and Operations are composed of smaller units just as the business was composed of Dev and Ops. Now consider mailing letters as a full-scale …"/>
+<meta property="og:description" content="Welcome Welcome to the third and final post in the Maps of DevOps series! In The First Way: Systems Thinking we used a mock scenario of mailing letters to demonstrate the importance of completing a finished product (sealed and mailed letters) over accumulating inventory (folded paper). We used this as …"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://jameselliothart.github.io/maps-of-devops-the-third-way.html"/>
 <meta property="og:type" content="article"/>
-<meta property="article:published_time" content="2020-05-19 00:00:00-05:00"/>
+<meta property="article:published_time" content="2020-05-29 00:00:00-05:00"/>
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="https://jameselliothart.github.io/author/james-hart.html">
 <meta property="article:section" content="DevOps"/>
@@ -91,7 +91,7 @@
       
     <h1 id="maps-of-devops-the-third-way">Maps of DevOps: The Third Way</h1>
     <p>
-          Posted on May 19, 2020 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
+          Posted on May 29, 2020 in <a href="https://jameselliothart.github.io/category/devops.html">DevOps</a>
 
           </br>
     </p>
@@ -100,14 +100,32 @@
 
   <div>
     <h2>Welcome</h2>
-<p>Welcome to the third and final post in the Maps of DevOps series!</p>
+<p>Welcome to the third and final post in the Maps of DevOps series!
+In <a href="https://jameselliothart.github.io/maps-of-devops-the-first-way">The First Way: Systems Thinking</a> we used a mock scenario of mailing letters to demonstrate the importance of completing a finished product (sealed and mailed letters) over accumulating inventory (folded paper).
+We used this as an analogy for a Development organization delivering working software to production rather than letting it sit undeployed, and this inherently meant that the strict boundary between coding applications (development) and deploying applications (operations) needed to be broken down.
+This focus on creating value worked well when we knew what we were doing (when we were in Known Territory), but in <a href="https://jameselliothart.github.io/maps-of-devops-the-second-way">The Second Way: Amplify Feedback Loops</a> we found it was insufficient once Anomaly appeared and cast us into the Unknown, aka Chaos.
+To handle this, we needed to be able to proactively gather and respond to information about the validity of our assumptions and the effects of our efforts.</p>
 <h2>A Return to the Beginning</h2>
-<p>We noted at the beginning that Development and Operations are composed of smaller units just as the business was composed of Dev and Ops.
-Now consider mailing letters as a full-scale business enterprise: instead of one Folder, there is a team of Folders reporting to a team lead with each department composed of many teams.</p>
+<p>We noted in The First Way that the Development and Operations organizations are composed of smaller units just as the business was composed of Dev and Ops.</p>
+<p>Now let us expand our scenario to a full-scale business enterprise: instead of one Folder, there is a team of Folders reporting to a team lead with each department composed of many teams, some middle managers, and department heads.
+As a large organization is not created <em>ex nihilo</em> but evolves from a small one, one can imagine the natural expansion a real business would undergo to reach this rather generic org structure.</p>
+<p>At the same time one can also imagine that as our enterprise grows, the department heads, managers, and even team leads get further away from the day-to-day work done by the Folders.
+This is a necessary shift but also creates a dilemma: even if we know <em>what</em> has to happen to improve department efficiency, <em>how</em> do we implement 
+From this thought experiment, it is obvious that any improvement in the efficiency of a department must have a corresponding improvement in the efficiency in its teams and ultimately the individuals within it.
+It is necessary for higher levels of management to operate at higher levels of abstraction to be able to focus on the broader company or even (maybe especially) industry trends.
+This allows them to know what direction the company or industry are going, what budgetary constraints are in place, etc.
+However, this disconnect also means that any action they take on their own is necessarily painted with a broad brush and lacks the necessary details to be effective.
+It is through communication between the different levels of the organization that the details from lower levels are able to keep higher levels up to date with the day-to-day functioning of the organization's processes and the higher levels are able to keep lower levels informed about the company direction so that their efforts can be focused in the right place.
+Lower levels have a limited circle of influence to affect change.
+Circle of influence vs circle of concern - differences between the levels of an organization.</p>
+<p>What is not obvious is how to bring about such an organizational change.
+Many organizations find themselves plagued by inefficiencies and recognize they need to improve but do not have the insight to know where to begin, these inefficiencies having been the result of slow decay over time.
+Suddenly, the idea to "do Agile" and "implement DevOps"
+In ouroboric fashion, the end has become the beginning.</p>
 <p>The question we ask now is: Who has the most information about what works well and what doesn't on the current folding techniques?
 The answer, of course, is the people doing the folding - the folders themselves.
 That is not really the question.
-The question is who know <em>what the process actually is in practice</em> as opposed to simply what someone <em>imagines</em> it to be.
+The question is who knows <em>what the process actually is in practice</em> as opposed to simply what someone <em>imagines</em> it to be.
 People doing the work may have a blind spot in thinking something works well that doesn't at all (they don't know of another way).
 If you want to find out what the process is, you have to ask the people doing the processing.
 Gather their ideas for improvement, but this is also a chance for more senior leaders to give perspective and counsel.</p>
