--- a/tags.html
+++ b/tags.html
@@ -87,15 +87,23 @@
           <li><a href="https://jameselliothart.github.io/tag/continuousdelivery.html">ContinuousDelivery</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/continuousintegration.html">ContinuousIntegration</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/continuouslearning.html">ContinuousLearning</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/dapper.html">Dapper</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/development.html">Development</a> (4)</li>
           <li><a href="https://jameselliothart.github.io/tag/devops.html">DevOps</a> (4)</li>
           <li><a href="https://jameselliothart.github.io/tag/feedback.html">Feedback</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/fsharp.html">FSharp</a> (4)</li>
           <li><a href="https://jameselliothart.github.io/tag/mapsofmeaning.html">MapsOfMeaning</a> (4)</li>
           <li><a href="https://jameselliothart.github.io/tag/monitoring.html">Monitoring</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/orm.html">ORM</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/sql.html">SQL</a> (1)</li>
+          <li><a href="https://jameselliothart.github.io/tag/sqlite.html">SQLite</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/systemsthinking.html">SystemsThinking</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thefirstwayofdevops.html">TheFirstWayOfDevOps</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thesecondwayofdevops.html">TheSecondWayOfDevOps</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thethirdwayofdevops.html">TheThirdWayOfDevOps</a> (1)</li>
           <li><a href="https://jameselliothart.github.io/tag/thethreeways.html">TheThreeWays</a> (4)</li>
+          <li><a href="https://jameselliothart.github.io/tag/todo.html">Todo</a> (4)</li>
+          <li><a href="https://jameselliothart.github.io/tag/tutorial.html">Tutorial</a> (4)</li>
     </ul>
   </div>
 </article>
